Introduce Role and RolesMetadata
Introduce Role as superclass of User and RolesMetadata to the cluster
state.

- Allow to read old UsersMetadata and convert them to the new structure
  with the first CREATE/DROP/ALTER USER/ROLE action.

- Don't allow to execute CREATE/DROP/ALTER USER/ROLE until all nodes
  have been upgraded to 5.6 to avoid complex handling, where we would
  need to handle old style actions in UsersMetadata which can be read by
  old nodes, and only forbid new actions.

- Fixed an issue, where `iterations` field of `SecureHash` was not read
  correctly from XContent.

- Forbid for now to set/change a password on a ROLE, since ROLES are not
  allowed to login.

- Rename User -> Role, `isUser()` distinguishes between normal Users (can login)
  and Roles.

- Add integration test to restore old `UsersMetadata` and override all existing
  entries in `RolesMetadata`, new `RolesMetadata` is created out of the old
  `UsersMetadata` and old `UsersMetadata` is dropped once any of CREATE/DROP/ALTER
  actions takes place.